# pandas_wrapper

./: README.md  pyproject.toml  requirements.txt  setup.py
pandas_pg/: __init__.py  pandas_pg.py
pandas_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pandas_wrapper/pandas_pg/: pandas_pg.py
pandas_wrapper/pg/: pandas_pg.py
pandas_wrapper/s3/: pandas_s3.py
tests/: pg.ipynb
